--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ header h1 {
 }
 
 header h2,
-#outro {
+#outro,
+#internship,
+#travelinsurance {
     background-color: rgb(192, 188, 188);
     font-family: Arial, Helvetica, sans-serif;
     color: gold;
@@ -132,6 +134,7 @@ i a {
 }
 
 .carousel {
+    padding: 10px;
     width: 800px;
     height: 400px;
     margin: auto auto;
@@ -161,7 +164,9 @@ section img {
 
 #book,
 #rail,
-#bus {
+#bus,
+#intern,
+#insurance {
     background-color: gold;
     font-size: 20px;
     position: absolute;
@@ -169,16 +174,13 @@ section img {
 }
 
 .video {
-    background-color: rgb(211, 15, 15);
+    background-color: rgb(185, 220, 252);
     display: flex;
-
-
 
 }
 
 video {
     width: 1000px;
-    
     margin: 0 auto;
 }
 
@@ -201,4 +203,14 @@ video {
     position: relative;
     width: 250px;
     height: 300px;
+}
+
+#imageintern {
+    position: relative;
+    left: 40vw;
+    background-color: rgb(185, 220, 252);
+    border: 2px solid black;
+    border-radius: 15px;
+    margin: 10px;
+    padding: 10px;
 }
